 - default `defs.lua` now reads a new file, `defs_post.lua`, which
   currently filters out movedefs unused by any unitdef (previously
   this was done by the engine). You can prevent this filter by adding
   the `dont_remove` field to such movedefs. This is useful to make
   them available in `Spring.MoveCtrl.SetMoveDef` but beware the perf cost.

Misc:
 - remove joystick support
 - detect hangs during filesystem initialisation
 - fix stale thread-id cache in watchdog after reload
 - make LuaVFSDownload rescan archives in main thread, and do so when a download finishes (not when one starts)
 - account for raw search in AICallback::GetPathLength
 - remove LuaShaders config-setting
 - change PitchAdjust config-setting from a boolean to an integer
   0 disables, 1 scales pitch by the square root of game speed, 2
   scales linearly with game speed
 - `/nocost` now accepts 0/1 parameter (still toggles if none given)
 - model metadata for assimp/obj can now define pieces hierarchy
   by either nested tables or 'parent' key.

Fixes:
 - fix #5803 (move goals cancelled when issued onto blocked terrain)
 - fix Spring.{G,S}etConfigFloat not being callable
 - fix Spring.GetPlayerRoster sometimes excluding active players



-- 104.0 --------------------------------------------------------
Major:
 - Add LuaMenu - an unsynced stripped down Lua environment that starts before the game is loaded and persists through reload
   this environment receives the Draw{Genesis,Screen,ScreenPost} callins as well as
   a special AllowDraw FPS limiter which enables these if true is returned from it
   (otherwise they are called once every 30 seconds)
 ! make GL3.0 the minimum required OpenGL version; Intel G45's and other relics are now banned
   (any driver that claims support for this *and* shaders is allowed to run Spring unimpeded)
 - improve memory management so Spring.Reload can be safely called multiple times in a row
 - kill various desyncs that slipped into 103.0

Misc: